--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   
   <div class="indicator"></div>
   <div class="sign">
-    by masahito / <a href="http://www.ma5a.com/" >ma5a.com</a>
+    by darkv / <a href="http://www.iamdarkv.blogspot.com/" >follow me</a>
   </div>
 </body>
