--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<!-- Move around your cursor, the puppy will look at the direction. Click or tap, and the dog will walk  -->
-
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" href="https://i.imgur.com/Ty3zLxO.png" type="image/x-icon">
+  <title>Cutie Puppy - DarkV</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
 <body>
   <div class="wrapper">
     <!-- if you want to see the markers, remove d-none from them -->
